# TagMo

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  EditorTP.java  FUNDING.yml  LICENSE  LICENSE.AbandonedCart  MainActivity.java  README.md  build.gradle  debugger.xml  github_settings.xml  gradle.properties  settings.gradle
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_add_feature.yml  03_email_bugs.yml  bug_report.yml  email_bugs.yml
.github/workflows/: android.yml  artifacts.yml  wearos.yml
_windows/: git.xml  path.macros.xml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro  tagmo.apk
app/libs/: CMakeLists.txt
app/libs/free-reflection/: CMakeLists.txt  main.cpp
app/src/debug/: AndroidManifest.xml
app/src/galaxy/: AndroidManifest.xml
app/src/github/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: amiibo.json  keytable.json  log.html
app/src/main/jni/: CMakeLists.txt  amiibo.c  gitversion.h  keygen.c  main.c  main.h  util.c  version.c
app/src/main/jni/include/mbedtls/: config.h
app/src/main/jni/include/nfc3d/: amiibo.h
app/src/main/jni/mbedtls/: LICENSE.txt
app/src/watch/: AndroidManifest.xml
app/src/wearos/: AndroidManifest.xml
assets/: tagmo_aligned.psd  tagmo_feature.psd  tagmo_layered.psd
codestyles/: Default.xml
docs/: chameleon-usage.md
gradle/wrapper/: gradle-wrapper.properties
ndk/jni/: Android.mk  Application.mk  README.md  amiibo.c  drbg.c  keygen.c  main.c  main.h  util.c  util.h
ndk/jni/include/nfc3d/: amiibo.h  drbg.h  keygen.h  version.h
(+957 files in other folders)
